fix board overflow, can resize

--- a/client/src/entry/App/style.css
+++ b/client/src/entry/App/style.css
@@ -17,4 +17,5 @@ a, a:visited, a:active, a:-webkit-any-link {
   flex-direction: column;
   height: 100%;
   flex: 1 1 auto;
+  overflow: auto;
 }
